# procedural-music-reasoning

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
docs/: music_reasoning_overview_report.md  music_reasoning_specification.md
examples/: chord_roman_showcase_l5.txt  pitch_interval_showcase_l5.txt
scripts/: evaluate_openrouter.py  generate_benchmark.py  generate_examples.py
src/music_reasoning_tasks/: __init__.py  _music_theory.py  chord_roman_reasoning.py  pitch_interval_reasoning.py
tests/: test_chord_roman_reasoning.py  test_evaluate_openrouter.py  test_generate_benchmark.py  test_music_theory.py  test_pitch_interval_reasoning.py
